testdata/baselines/reference/submodule/conformance/typeRelationships.errors.txt
typeRelationships.ts(9,9): error TS2322: Type 'C' is not assignable to type 'this'.
  'C' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'C'.


==== typeRelationships.ts (1 errors) ====
    class C {
        self = this;
        c = new C();
        foo() {
            return this;
        }
        f1() {
            this.c = this.self;
            this.self = this.c;  // Error
            ~~~~~~~~~
!!! error TS2322: Type 'C' is not assignable to type 'this'.
!!! error TS2322:   'C' is assignable to the constraint of type 'this', but 'this' could be instantiated with a different subtype of constraint 'C'.
        }
        f2() {
            var a: C[];
            var a = [this, this.c];  // C[] since this is subtype of C
            var b: this[];
            var b = [this, this.self, null, undefined];
        }
        f3(b: boolean) {
            return b ? this.c : this.self;  // Should be C
        }
    }
    
    class D extends C {
        self1 = this;
        self2 = this.self;
        self3 = this.foo();
        d = new D();
        bar() {
            this.self = this.self1;
            this.self = this.self2;
            this.self = this.self3;
            this.self1 = this.self;
            this.self2 = this.self;
            this.self3 = this.self;
            this.d = this.self;
            this.d = this.c;  // Error
            this.self = this.d;  // Error
            this.c = this.d;
        }
    }
    